# cg-learning

./: .clang-format  .clangd  .gitignore  .gitmodules  README.md
cpp/: learn_opengl.c  meson.build
cpp/include/: LoadShaders.h
cpp/src/01-triangles/: 01-triangles.cpp
js/: README.md  package.json  pnpm-lock.yaml  vite.config.ts
js/src/routes/triangle/: +page.svelte
media/shaders/glsl/triangles/: triangles.vert
media/shaders/wgsl/: shader.wgsl
rust/: Cargo.toml
rust/ch01-introduction/: Cargo.toml
rust/gl-utils/: Cargo.toml
rust/opengl-programming-guide/: Cargo.toml
rust/opengl-programming-guide/src/: lib.rs
rust/utils/: Cargo.toml
rust/utils/src/: lib.rs
rust/wgpu-intro/: Cargo.toml  hello-world.html
rust/wgpu-intro/src/: buffers_and_indices.rs  lib.rs  the_pipeline.rs  the_surface.rs  the_window.rs  the_window_ch.rs
