[workspace]
members = ["ch01-introduction", "wgpu-intro"]
resolver = "3"

[workspace.dependencies]
glutin = "0.32.3"
nalgebra = "0.35.0"
softbuffer = "0.4.8"
anyhow = "1.0"
winit = { version = "0.30", features = ["android-native-activity"] }
env_logger = "0.11.11"
log = "0.4"
wgpu = "30.0.0"
pollster = "0.4.0"
