[package]
name = "utils"
version = "0.1.0"
edition = "2024"

[dependencies]
tracing-subscriber = { workspace = true, features = ["env-filter"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
tracing-web = { workspace = true }
web-sys = { version = "0.3", features = [
    "Location",
    "UrlSearchParams",
    "Window",
] }

[target.'cfg(target_os = "android")'.dependencies]
log-panics = "2.1.0"
